# nwo-parts-gallery

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: publish_from_layer1.py
migrations/: env.py
scripts/: init_db.sql
src/: __init__.py  cli.py
src/api/: identity.py  main.py  publish.py  routes.py
src/gallery/: __init__.py  router.py
src/gallery/templates/: base.html  gallery.html  part_detail.html
src/models/: __init__.py  database.py  orm.py  schemas.py
src/search/: __init__.py  embeddings.py  service.py
src/storage/: __init__.py  blob.py  thumbnail.py
tests/: test_publish.py  test_search.py
